Fix landing image layout on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -162,8 +162,10 @@
     grid-column: 1 / 3;
     grid-row: 1 / 3;
     height: 230px;
-    margin-left: -50px;
-    width: 100vw;
+    margin-left: -40px;
+    max-width: calc(100vw);
+    overflow: hidden;
+    width: calc(100vw);
   }
   .home__landing-skyline img {
     border-radius: 0;
@@ -203,6 +205,8 @@
 @media (max-width: 849px) {
   .home__landing-skyline {
     margin-left: -150px;
+    max-width: calc(100vw + 110px);
+    width: calc(100vw + 110px);
   }
   .home__landing-skyline img {
     height: 100%;
